fixed button in header on mobile screens

--- a/src/styles/main-menu.scss
+++ b/src/styles/main-menu.scss
@@ -102,7 +102,8 @@
     }
 
     @media (max-width: 430px) {
-      left: 164px;
+      left: 212px;
+      bottom: -28px;
     }
   }
 
@@ -171,8 +172,10 @@
   }
 
   &__button {
+    position: relative;
     margin-top: 60px;
     margin-left: 100px;
+    z-index: 1;
 
     @media (max-width: 860px) {
       margin-left: 0;
